--- a/TimeScanner.Wab/Views/Calendars/Index.cshtml
+++ b/TimeScanner.Wab/Views/Calendars/Index.cshtml
@@ -12,7 +12,7 @@
 <br />
 <center><h1>@Html.ActionLink("<", "Index", "Calendars", new { id = string.Format("{0:dd-MM-yyyy}", Model.PreviuosMonth) }, new { @class = "btn btn-default" }) @Model.MonthName @Html.ActionLink(">", "Index", "Calendars", new { id = string.Format("{0:dd-MM-yyyy}", Model.NextMonth) }, new { @class = "btn btn-default" })</h1></center>
 <table class="calendar table">
-    <tr>
+    <tr style="background:gray">
         <th>อาทิตย์</th>
         <th>จันทร์</th>
         <th>อังคาร</th>
@@ -25,7 +25,7 @@
             int count = 1;
             foreach (var date in Model.Days)
             {
-                string boxcolor =  date.IsWorkingDay ? "blue" : "red";
+                string boxcolor =  date.IsWorkingDay ? "#95B9FF" : "#F3B9B9";
                 boxcolor = date.IsActivity ? boxcolor : "white";
                 string note = date.IsActivity ? date.Note : string.Empty;
                 if (count == 0)
