--- a/TimeScanner.Wab/Views/Shared/_LoginPartial.cshtml
+++ b/TimeScanner.Wab/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,9 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("ผู้ดูแลระบบ " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">ออกจากระบบ</a></li>
     </ul>
     }
 }
