--- a/TimeScanner.Wab/Views/Report/Index.cshtml
+++ b/TimeScanner.Wab/Views/Report/Index.cshtml
@@ -3,7 +3,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>รายงาน</h2>
 
-@Html.ActionLink("Daily", "Daily", "Report")
-@Html.ActionLink("Monthly", "Monthly", "Report")
+@Html.ActionLink("รายงานรายวัน", "Daily", "Report")
+<br />
+@Html.ActionLink("รายงานรายเดือน", "Monthly", "Report")
