--- a/TimeScanner.Wab/Views/Absences/Create.cshtml
+++ b/TimeScanner.Wab/Views/Absences/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AbsenceDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <select name="day" class="form-control">
+                @*<select name="day" class="form-control">
                     @for (int i = 1; i <= 31; i++)
                     {
                         @Html.Raw("<option " + (Model.AbsenceDate.Day == i ? "selected" : "") + ">" + i + "</option>")
@@ -35,9 +35,11 @@
                     {
                         @Html.Raw("<option " + (Model.AbsenceDate.Year == i ? "selected" : "") + ">" + i + "</option>")
                     }
-                </select>
+                </select>*@
+
                 @*@Html.EditorFor(model => model.AbsenceDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.AbsenceDate, "", new { @class = "text-danger" })*@
+                <input name="day" class="form-control datepicker date text-box single-line" id="day" type="date" value="@string.Format("{0:dd/MM/yyyy}", DateTime.Today)">
             </div>
         </div>
 
