--- a/TimeScanner.Wab/Views/Calendars/Delete.cshtml
+++ b/TimeScanner.Wab/Views/Calendars/Delete.cshtml
@@ -6,51 +6,12 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Calendar</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.IssueDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IssueDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Activity)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Activity)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StartTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EndTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EndTime)
-        </dd>
-
-    </dl>
-
+<h3>ต้องการลบกิจกรรมใช่หรือไม่?</h3>
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="ยืนยัน" class="btn btn-default" /> |
+            @Html.ActionLink("กลับไปหน้าหลัก", "Index")
         </div>
     }
-</div>
