--- a/TimeScanner.Wab/Views/Calendars/Details.cshtml
+++ b/TimeScanner.Wab/Views/Calendars/Details.cshtml
@@ -1,15 +1,20 @@
-﻿@model TimeScanner.DSA.EF.Calendar
-
+﻿@model TimeScanner.Wab.ViewModels.Calendar
 @{
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>รายละเอียดกิจกรรม</h2>
 
 <div>
-    <h4>Calendar</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.IsWorkingDay)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsWorkingDay)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.IssueDate)
         </dt>
@@ -25,7 +30,13 @@
         <dd>
             @Html.DisplayFor(model => model.Activity)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Note)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Note)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StartTime)
         </dt>
@@ -45,6 +56,9 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @if (User.Identity.IsAuthenticated)
+    {
+        @Html.ActionLink("แก้ไข", "Edit", new { id = Model.Id }) | @Html.ActionLink("ลบ", "Delete", new { id = Model.Id }) |
+    }    
+    @Html.ActionLink("กลับไปหน้าหลัก", "Index")
 </p>
