--- a/TimeScanner.Wab/Views/Calendars/Index.cshtml
+++ b/TimeScanner.Wab/Views/Calendars/Index.cshtml
@@ -5,9 +5,13 @@
 }
 
 <br />
-<p>
-    @Html.ActionLink("อัพเดท", "Create", null, new { @class="btn btn-info pull-right"})
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        @Html.ActionLink("อัพเดท", "Create", null, new { @class = "btn btn-info pull-right" })
+    </p>
+}
+
 <br />
 <br />
 <center><h1>@Html.ActionLink("<", "Index", "Calendars", new { id = string.Format("{0:dd-MM-yyyy}", Model.PreviuosMonth) }, new { @class = "btn btn-default" }) @Model.MonthName @Html.ActionLink(">", "Index", "Calendars", new { id = string.Format("{0:dd-MM-yyyy}", Model.NextMonth) }, new { @class = "btn btn-default" })</h1></center>
@@ -28,18 +32,19 @@
                 string boxcolor =  date.IsWorkingDay ? "#95B9FF" : "#F3B9B9";
                 boxcolor = date.IsActivity ? boxcolor : "white";
                 string note = date.IsActivity ? date.Note : string.Empty;
+                string DayInMonth = date.IsDayInMonth ? "black" : "gray";
                 if (count == 0)
                 {
                     @:<tr>
                 }
-                if (date.IsDayInMonth)
+                if (date.IsActivity && User.Identity.IsAuthenticated)
                 {
-                    @:<td style="background-color:@boxcolor"><div class="day">@date.Date.Day</div><br /><div>@note</div></td>
-                    }
-                else {
-                    @:<td style="background-color:@boxcolor; color:gray"><div class="day">@date.Date.Day</div><br /><div>@note</div></td>
-                    }
-                
+                    @:<td style="background-color:@boxcolor; color:@DayInMonth"><a href="@Url.Action("Details", "Calendars", new { id = date.Id })"><div class="day">@date.Date.Day</div><br /><div>@note</div></a></td>
+                }
+                else
+                {
+                    @: <td style="background-color:@boxcolor; color:@DayInMonth"><div class="day">@date.Date.Day</div><br /><div>@note</div></td>
+                }                         
                 if ((count % 7) == 0){ 
                     @:</tr><tr>
                 }
