--- a/TimeScanner.Wab/Views/Report/Daily.cshtml
+++ b/TimeScanner.Wab/Views/Report/Daily.cshtml
@@ -1,51 +1,42 @@
-﻿@model IEnumerable<TimeScanner.DSA.EF.Employee>
+﻿@model IEnumerable<TimeScanner.Wab.ViewModels.DailyReport>
 
 @{
     ViewBag.Title = "Daily";
 }
 
-<h2>Daily</h2>
-
-<form method="post">
-    <select name="day" class="form-control">
-        @for (int i = 1; i <= 31; i++)
-        {
-            @Html.Raw("<option>" + i + "</option>")
-        }
-    </select>
-    <select name="month" class="form-control">
-        @for (int i = 1; i <= 12; i++)
-        {
-            @Html.Raw("<option value='" + i + "'>" + new DateTime(DateTime.Now.Year, i, 1).ToString("MMMM", System.Globalization.CultureInfo.GetCultureInfo("th-TH")) + "</option>")
-        }
-    </select>
-    <select name="year" class="form-control">
-        @for (int i = DateTime.Now.Year + 543; i > DateTime.Now.Year + 523; i--)
-        {
-            @Html.Raw("<option>" + i + "</option>")
-        }
-    </select>
-    <input type="submit" class="btn btn-primary" />
+<h2>รายงานรายวัน</h2>
+<form method="post">   
+    วันที่ 
+    <input name="day" class="form-control datepicker" id="day" type="date" value="@string.Format("{0:dd/MM/yyyy}", DateTime.Today)">
+    <br />
+    <input type="submit" class="btn btn-primary" value="แสดง" />
 </form>
+<br />
+<br />
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.EmployeeCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FullName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TimeScan.TimeIn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TimeScan.TimeOut)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Position)
-        </th>
-        <th></th>
-    </tr>
+        <tr>
+                 <th>
+                    รหัสพนักงาน
+                </th>
+                <th>
+                   ชื่อ-นามสกุล
+                </th>
+                <td>
+                    เวลาเข้างาน
+                </td>
+                <th>
+                    เวลาออกงาน
+                </th>
+                <th>
+                    สถานะ
+                </th>
+                <th>
+                    หมายเหตุ
+                </th>
+                <th>
+                    เพิ่มเติม
+                </th>
+        </tr>
 
     @foreach (var item in Model)
     {
@@ -57,16 +48,19 @@
                 @Html.DisplayFor(modelItem => item.FullName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TimeScan.TimeIn)
+                @Html.DisplayFor(modelItem => item.TimeIn)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TimeScan.TimeOut)
+                @Html.DisplayFor(modelItem => item.TimeOut)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Position)
+                @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Monthly", new { id = item.Id })
+                @Html.DisplayFor(modelItem => item.Remark)
+            </td>
+            <td>
+                <a href="@Url.Action("Monthly","Report", new { id = item.EmployeeCode, month = DateTime.Today.Month, year = DateTime.Today.Year})">ดู</a>
             </td>
         </tr>
     }
