--- a/TimeScanner.App/MainWindow.xaml
+++ b/TimeScanner.App/MainWindow.xaml
@@ -6,28 +6,37 @@
         xmlns:local="clr-namespace:TimeScanner.App"
         xmlns:EF="clr-namespace:TimeScanner.DSA.EF;assembly=TimeScanner.DSA" x:Class="TimeScanner.App.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="424.525" Width="525">
-    <Grid Margin="0,0,-5,-4" RenderTransformOrigin="0.5,0.5">
+        Title="MainWindow" Height="745.875" Width="702.461">
+    <Grid Margin="0,0,-6,69" RenderTransformOrigin="0.279,0.231">
+        <Grid.Background>
+            <ImageBrush/>
+        </Grid.Background>
         <Grid.RenderTransform>
             <TransformGroup>
                 <ScaleTransform/>
                 <SkewTransform/>
                 <RotateTransform Angle="-0.059"/>
-                <TranslateTransform/>
+                <TranslateTransform X="-0.183" Y="0.161"/>
             </TransformGroup>
         </Grid.RenderTransform>
         <Grid.RowDefinitions>
-            <RowDefinition Height="263*"/>
-            <RowDefinition Height="135*"/>
+            <RowDefinition Height="423*"/>
+            <RowDefinition Height="218*"/>
             <RowDefinition Height="0*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="245*"/>
-            <ColumnDefinition Width="13*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="Auto" MinWidth="147"/>
+            <ColumnDefinition Width="436*"/>
+            <ColumnDefinition Width="111*"/>
+            <ColumnDefinition Width="6*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="dataGrid" Margin="0,10,15,10" Grid.ColumnSpan="3" AutoGenerateColumns="False" Grid.Row="1">
+        <DataGrid x:Name="dataGrid" Margin="59,2,63,50" Grid.ColumnSpan="3" AutoGenerateColumns="False" Grid.Row="1" Background="#FFE4E2E2" BorderBrush="#FF1373C3">
+            <DataGrid.OpacityMask>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </DataGrid.OpacityMask>
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding EmployeeCode}" Header="รหัสพนักงาน"/>
                 <DataGridTextColumn Binding="{Binding FullName}" Header="ชื่อ"/>
@@ -35,22 +44,22 @@
                 <DataGridTextColumn Binding="{Binding TimeOut}" Header="เวลาออก"/>
             </DataGrid.Columns>
         </DataGrid>
-        <TextBox x:Name="TitleNameTextBox" HorizontalAlignment="Left" Height="23" Margin="10,92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
-        <TextBox x:Name="FirstNameTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="10,135,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="41,99,0,0" TextWrapping="Wrap" Text="TitleName" VerticalAlignment="Top" Height="16" Width="54"/>
-        <TextBox x:Name="LastNameTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="10,170,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="42,135,0,0" TextWrapping="Wrap" Text="FirstName" VerticalAlignment="Top" Height="16" Width="54"/>
-        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="42,171,0,0" TextWrapping="Wrap" Text="LastName" VerticalAlignment="Top" Height="16" Width="53"/>
-        <Image x:Name="image" HorizontalAlignment="Left" Height="100" Margin="207,22,0,0" VerticalAlignment="Top" Width="100" Grid.Column="1">
+        <TextBox x:Name="TitleNameTextBox" HorizontalAlignment="Left" Height="23" Margin="174,171,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+        <TextBox x:Name="FirstNameTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="174,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBlock x:Name="textBlock1" Margin="98,171,0,0" TextWrapping="Wrap" Text="คำนำหน้า" VerticalAlignment="Top" Height="23" HorizontalAlignment="Left" Width="71" RenderTransformOrigin="2.582,0.911" Grid.Column="1" FontSize="18"/>
+        <TextBox x:Name="LastNameTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="174,265,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="134,217,0,0" TextWrapping="Wrap" Text="ชื่อ" VerticalAlignment="Top" Height="23" Width="40" Grid.Column="1" FontSize="18"/>
+        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="121,265,0,0" TextWrapping="Wrap" Text="สกุล" VerticalAlignment="Top" Height="23" Width="48" Grid.Column="1" FontSize="18"/>
+        <Image x:Name="image" HorizontalAlignment="Left" Height="100" Margin="4,43,0,0" VerticalAlignment="Top" Width="100" Grid.Column="2">
             <Image.OpacityMask>
                 <ImageBrush/>
             </Image.OpacityMask>
         </Image>
-        <RadioButton x:Name="TimeInRadioButton" Content="TimeIn" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" FontSize="24" IsChecked="True" Height="31" Width="91"/>
-        <Label x:Name="CurrentDate" Content="DateTime..." HorizontalAlignment="Left" Margin="81,0,0,0" VerticalAlignment="Top" FontSize="26.667" Grid.ColumnSpan="2" Width="212" Height="55"/>
-        <Label x:Name="TimeLabel" Content="DateTime&#xD;&#xA;" HorizontalAlignment="Left" Margin="23,205,0,0" VerticalAlignment="Top" FontSize="16" Height="53" Width="78"/>
-        <RadioButton x:Name="TimeOutRadioButton" Content="TimeOut" Grid.Column="1" HorizontalAlignment="Left" Margin="20,37,0,0" VerticalAlignment="Top" FontSize="24" Height="31" Width="110"/>
-        <Label x:Name="statusLabel" Content="DateTime&#xA;" HorizontalAlignment="Left" Margin="75,236,0,0" VerticalAlignment="Top" FontSize="16" Grid.Column="1" Height="53" Width="78" Grid.RowSpan="2"/>
-        <Button x:Name="button" Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="258,224,0,0" VerticalAlignment="Top" Width="104" Height="32" Click="button_Click_1"/>
+        <RadioButton x:Name="TimeInRadioButton" Content="เข้างาน" HorizontalAlignment="Left" Margin="78,91,0,0" VerticalAlignment="Top" FontSize="24" IsChecked="True" Height="31" Width="91" Grid.Column="1"/>
+        <Label x:Name="CurrentDate" Content="DateTime..." HorizontalAlignment="Left" Margin="116,10,0,0" VerticalAlignment="Top" FontSize="26.667" Width="260" Height="55" Grid.Column="1"/>
+        <Label x:Name="TimeLabel" Content="DateTime&#xD;&#xA;" HorizontalAlignment="Left" Margin="151,309,0,0" VerticalAlignment="Top" FontSize="30" Height="58" Width="143" Grid.Column="1"/>
+        <RadioButton x:Name="TimeOutRadioButton" Content="ออกงาน" Grid.Column="1" HorizontalAlignment="Left" Margin="217,91,0,0" VerticalAlignment="Top" FontSize="24" Height="31" Width="110"/>
+        <Label x:Name="statusLabel" Content="DateTime&#xA;" HorizontalAlignment="Left" Margin="151,372,0,0" VerticalAlignment="Top" FontSize="20" Grid.Column="1" Height="53" Width="78" Grid.RowSpan="2" Background="#00000000"/>
+        <Button x:Name="button" Content="Refresh" Grid.Column="1" HorizontalAlignment="Left" Margin="360,191,0,-16" VerticalAlignment="Top" Width="94" Height="43" Click="button_Click_1" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
     </Grid>
 </Window>
